Fix ol/ul li margin bottom and code overflow

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,12 +1,17 @@
+.markdown {
+  overflow-wrap: break-word;
+}
+.markdown * + * {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
 .markdown li + li {
   margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .markdown li > p + p {
   margin-top: 1.5rem;
-}
-
-.markdown * + * {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
